--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -35,7 +35,8 @@ jobs:
       image: alpine:3.19
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      run: |
+        git clone https://github.com/thepeshka/amneziawg-tools
 
     - name: Build AmneziaWG tools
       run: |
@@ -54,7 +55,7 @@ jobs:
 
   Build-for-Alpine-ARM64:
     name: Build for Alpine ARM64
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-latest
     container:
       image: alpine:3.19
     steps:
@@ -65,7 +66,7 @@ jobs:
       run: |
         apk add linux-headers build-base &&
         cd src &&
-        make &&
+        make CC=aarch64-linux-gnu-gcc &&
         mkdir build &&
         cp wg ./build/awg &&
         cp wg-quick/linux.bash ./build/awg-quick
