--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -55,20 +55,26 @@ jobs:
   Build-for-Alpine-ARM64:
     name: Build for Alpine ARM64
     runs-on: ubuntu-latest
-    container:
-      image: alpine:3.19
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        platforms: linux/arm64
+        images: thepeshka/amneziawg-tools
+
+    - name: Build
+      uses: docker/build-push-action@v5
+      with:
+        platforms: linux/arm64
+        push: false
+        file: alpine-arm.dockerfile
+
     - name: Build AmneziaWG tools
       run: |
-        apk add linux-headers build-base &&
-        cd src &&
-        make CC=aarch64-alpine-linux-musl-gcc &&
-        mkdir build &&
-        cp wg ./build/awg &&
-        cp wg-quick/linux.bash ./build/awg-quick
+        docker run -v $(PWD)/build:/app/build thepeshka/amneziawg-tools
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
